Enable VString & Enum array